--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Pablo Henrique Ferreira de França",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "zod": "^3.23.8"
@@ -35,7 +36,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^20.14.12",
-    "prisma": "^5.19.1",
+    "prisma": "^6.7.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
