--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/node": "^20.14.12",
     "prisma": "^6.7.0",
